<resources>
    <string name="app_name">TwoActivitiesLifecycle</string>
    <string name="btnSend">Send</string>
    <string name="secondactivity_name">Second Activity</string>
    <string name="tvTextHeader">Message Received</string>
    <string name="etData">Enter Your Message Here</string>
    <string name="btnReply">Reply</string>
    <string name="etReplyData">Enter Your Reply Here</string>
    <string name="tvTextReplyTextHeader">Message Received</string>
    <string name="btn3">Three</string>
    <string name="btn1">One</string>
    <string name="btn2">Two</string>


    <string name="One_article">Just for today I will try to live through this day only and not tackle my whole life problem at once. I can do something for twelve hours that would appall me if I had to keep it up for a lifetime.
Just for today I will be happy. This assumes to be true what Abraham Lincoln said，that “Most folks are as happy as they make up their minds to be.”
Just for today I will adjust myself to what is, and not try to adjust everything to my own desires. I will take my “luck” as it comes. Just for today I will try to strengthen my mind. I will study. I will learn something useful. I will not be a mental loafer. I will read something that requires effort, thought and concentration.
Just for today I will exercise my soul in three ways. I will do somebody a good turn and not get found out: If anybody knows of it, it will not count. I will do at least two things I don\'t want to do—just for exercise. I will not show anyone that my feelings are hurt: they may be hurt, but today I will not show it.
Just for today I will be agreeable. I will look as well as I can, dress becomingly, talk low, act courteously, criticize not one bit，and try not to improve or regulate anybody but myself.
Just for today I will have a program, I may not follow it exactly, but I will have it. I will save myself from two pests: hurry and indecision.
Just for today I will have a quiet half hour all by myself and relax. During this half hour, sometime, I will try to get a better perspective of my life. Just for today I will be unafraid. Especially I will not be afraid to enjoy what is beautiful，and to believe that as I give to the world, so the world will give to me.
    生活像一具大鞦韆，總在開心和憂愁間搖擺。每當我們陷入憂愁的低谷時，我們以開始沖向開心的谷頂。在深陷悲痛，跌入感情創傷和絕望的深淵的時候，能夠從中走出來的，就是戰勝悲傷的贏家。
    當你感覺情緒低落，失落和迷惘時，要從艱難中走出，你要不斷激勵自己。這可以用自我交談的方式有效地實現。自我交談其實就是與自己對話，它能夠有效地運用於靈魂的探索。當我們和自己談話時，我們很難說謊，因為我們的良心支配著交談。自我交談之所以有效，是因為我們可以聽到自己的想法，這對我們思想有很強的影響力。我們的大腦像耳朵一樣從思想中接受信息。重複激勵的談話和想法會調節大腦的反應。
    自我交談是一個軟體，當它被恰如其分地轉載我們的思想時，它就能指引我們得到好的結果和一個健康的心態。實際上我閃在生活中常發覺別人勸告自己要在學習、體育和生活等方面做得更好。我們經常對別人在我們耳邊的嘮叨感到厭煩，對富有建設性的建議也聽不進去。這是因為這不是來自我們內心的聲音。當這個聲音來自你的內心時，你就會全力以赴去實現它。因此，與自己對話可以改善我們的現狀。每個人都有優點和弱點。雖然我們不會在公共場合承認，我們清楚自己在個人生活的某些方面可以做得更好。通過自我交談我們可以做得更好，這個觀點就能在生活中變為現實。
    如果你是內向型的，你想如你隔壁的朋友那樣出眾，你所要做的就是和自己交談。充滿誠摯和感情地告訴自己“我可以像他一樣，我是個天生的演說家。我確實喜歡人們，和人交談很自然。我只要準備好傾聽和談話就是了。” 假設你愛一個人，你想告訴他或她，那么就對自己說“我全心全意地愛她，我知道她是我的唯一。如果我不告訴她，這對自己很不公平。每個人都喜歡他人所愛的。她也一樣。” 這些只是我用來解釋的例子，怎么說取決於你自己。如果你非常樂觀地想做得更好，自我交談就是最好的辦法。所以，開始交談吧！ 生活像一具大鞦韆，總在開心和憂愁間搖擺。每當我們陷入憂愁的低谷時，我們以開始沖向開心的谷頂。在深陷悲痛，跌入感情創傷和絕望的深淵的時候，能夠從中走出來的，就是戰勝悲傷的贏家。
    當你感覺情緒低落，失落和迷惘時，要從艱難中走出，你要不斷激勵自己。這可以用自我交談的方式有效地實現。自我交談其實就是與自己對話，它能夠有效地運用於靈魂的探索。當我們和自己談話時，我們很難說謊，因為我們的良心支配著交談。自我交談之所以有效，是因為我們可以聽到自己的想法，這對我們思想有很強的影響力。我們的大腦像耳朵一樣從思想中接受信息。重複激勵的談話和想法會調節大腦的反應。
    自我交談是一個軟體，當它被恰如其分地轉載我們的思想時，它就能指引我們得到好的結果和一個健康的心態。實際上我閃在生活中常發覺別人勸告自己要在學習、體育和生活等方面做得更好。我們經常對別人在我們耳邊的嘮叨感到厭煩，對富有建設性的建議也聽不進去。這是因為這不是來自我們內心的聲音。當這個聲音來自你的內心時，你就會全力以赴去實現它。因此，與自己對話可以改善我們的現狀。每個人都有優點和弱點。雖然我們不會在公共場合承認，我們清楚自己在個人生活的某些方面可以做得更好。通過自我交談我們可以做得更好，這個觀點就能在生活中變為現實。
    如果你是內向型的，你想如你隔壁的朋友那樣出眾，你所要做的就是和自己交談。充滿誠摯和感情地告訴自己“我可以像他一樣，我是個天生的演說家。我確實喜歡人們，和人交談很自然。我只要準備好傾聽和談話就是了。” 假設你愛一個人，你想告訴他或她，那么就對自己說“我全心全意地愛她，我知道她是我的唯一。如果我不告訴她，這對自己很不公平。每個人都喜歡他人所愛的。她也一樣。” 這些只是我用來解釋的例子，怎么說取決於你自己。如果你非常樂觀地想做得更好，自我交談就是最好的辦法。所以，開始交談吧！</string>

    <string name="Two_article">生活像一具大鞦韆，總在開心和憂愁間搖擺。每當我們陷入憂愁的低谷時，我們以開始沖向開心的谷頂。在深陷悲痛，跌入感情創傷和絕望的深淵的時候，能夠從中走出來的，就是戰勝悲傷的贏家。
    當你感覺情緒低落，失落和迷惘時，要從艱難中走出，你要不斷激勵自己。這可以用自我交談的方式有效地實現。自我交談其實就是與自己對話，它能夠有效地運用於靈魂的探索。當我們和自己談話時，我們很難說謊，因為我們的良心支配著交談。自我交談之所以有效，是因為我們可以聽到自己的想法，這對我們思想有很強的影響力。我們的大腦像耳朵一樣從思想中接受信息。重複激勵的談話和想法會調節大腦的反應。
    自我交談是一個軟體，當它被恰如其分地轉載我們的思想時，它就能指引我們得到好的結果和一個健康的心態。實際上我閃在生活中常發覺別人勸告自己要在學習、體育和生活等方面做得更好。我們經常對別人在我們耳邊的嘮叨感到厭煩，對富有建設性的建議也聽不進去。這是因為這不是來自我們內心的聲音。當這個聲音來自你的內心時，你就會全力以赴去實現它。因此，與自己對話可以改善我們的現狀。每個人都有優點和弱點。雖然我們不會在公共場合承認，我們清楚自己在個人生活的某些方面可以做得更好。通過自我交談我們可以做得更好，這個觀點就能在生活中變為現實。
    如果你是內向型的，你想如你隔壁的朋友那樣出眾，你所要做的就是和自己交談。充滿誠摯和感情地告訴自己“我可以像他一樣，我是個天生的演說家。我確實喜歡人們，和人交談很自然。我只要準備好傾聽和談話就是了。” 假設你愛一個人，你想告訴他或她，那么就對自己說“我全心全意地愛她，我知道她是我的唯一。如果我不告訴她，這對自己很不公平。每個人都喜歡他人所愛的。她也一樣。” 這些只是我用來解釋的例子，怎么說取決於你自己。如果你非常樂觀地想做得更好，自我交談就是最好的辦法。所以，開始交談吧！ 生活像一具大鞦韆，總在開心和憂愁間搖擺。每當我們陷入憂愁的低谷時，我們以開始沖向開心的谷頂。在深陷悲痛，跌入感情創傷和絕望的深淵的時候，能夠從中走出來的，就是戰勝悲傷的贏家。
    當你感覺情緒低落，失落和迷惘時，要從艱難中走出，你要不斷激勵自己。這可以用自我交談的方式有效地實現。自我交談其實就是與自己對話，它能夠有效地運用於靈魂的探索。當我們和自己談話時，我們很難說謊，因為我們的良心支配著交談。自我交談之所以有效，是因為我們可以聽到自己的想法，這對我們思想有很強的影響力。我們的大腦像耳朵一樣從思想中接受信息。重複激勵的談話和想法會調節大腦的反應。
    自我交談是一個軟體，當它被恰如其分地轉載我們的思想時，它就能指引我們得到好的結果和一個健康的心態。實際上我閃在生活中常發覺別人勸告自己要在學習、體育和生活等方面做得更好。我們經常對別人在我們耳邊的嘮叨感到厭煩，對富有建設性的建議也聽不進去。這是因為這不是來自我們內心的聲音。當這個聲音來自你的內心時，你就會全力以赴去實現它。因此，與自己對話可以改善我們的現狀。每個人都有優點和弱點。雖然我們不會在公共場合承認，我們清楚自己在個人生活的某些方面可以做得更好。通過自我交談我們可以做得更好，這個觀點就能在生活中變為現實。
    如果你是內向型的，你想如你隔壁的朋友那樣出眾，你所要做的就是和自己交談。充滿誠摯和感情地告訴自己“我可以像他一樣，我是個天生的演說家。我確實喜歡人們，和人交談很自然。我只要準備好傾聽和談話就是了。” 假設你愛一個人，你想告訴他或她，那么就對自己說“我全心全意地愛她，我知道她是我的唯一。如果我不告訴她，這對自己很不公平。每個人都喜歡他人所愛的。她也一樣。” 這些只是我用來解釋的例子，怎么說取決於你自己。如果你非常樂觀地想做得更好，自我交談就是最好的辦法。所以，開始交談吧！</string>

    <string name="Three_article">Just for today I will try to live through this day only and not tackle my whole life problem at once. I can do something for twelve hours that would appall me if I had to keep it up for a lifetime.
Just for today I will be happy. This assumes to be true what Abraham Lincoln said，that “Most folks are as happy as they make up their minds to be.”
Just for today I will adjust myself to what is, and not try to adjust everything to my own desires. I will take my “luck” as it comes. Just for today I will try to strengthen my mind. I will study. I will learn something useful. I will not be a mental loafer. I will read something that requires effort, thought and concentration.
Just for today I will exercise my soul in three ways. I will do somebody a good turn and not get found out: If anybody knows of it, it will not count. I will do at least two things I don\'t want to do—just for exercise. I will not show anyone that my feelings are hurt: they may be hurt, but today I will not show it.
Just for today I will be agreeable. I will look as well as I can, dress becomingly, talk low, act courteously, criticize not one bit，and try not to improve or regulate anybody but myself.
Just for today I will have a program, I may not follow it exactly, but I will have it. I will save myself from two pests: hurry and indecision.
Just for today I will have a quiet half hour all by myself and relax. During this half hour, sometime, I will try to get a better perspective of my life. Just for today I will be unafraid. Especially I will not be afraid to enjoy what is beautiful，and to believe that as I give to the world, so the world will give to me.
    Just for today I will try to live through this day only and not tackle my whole life problem at once. I can do something for twelve hours that would appall me if I had to keep it up for a lifetime.
Just for today I will be happy. This assumes to be true what Abraham Lincoln said，that “Most folks are as happy as they make up their minds to be.”
Just for today I will adjust myself to what is, and not try to adjust everything to my own desires. I will take my “luck” as it comes. Just for today I will try to strengthen my mind. I will study. I will learn something useful. I will not be a mental loafer. I will read something that requires effort, thought and concentration.
Just for today I will exercise my soul in three ways. I will do somebody a good turn and not get found out: If anybody knows of it, it will not count. I will do at least two things I don\'t want to do—just for exercise. I will not show anyone that my feelings are hurt: they may be hurt, but today I will not show it.
Just for today I will be agreeable. I will look as well as I can, dress becomingly, talk low, act courteously, criticize not one bit，and try not to improve or regulate anybody but myself.
Just for today I will have a program, I may not follow it exactly, but I will have it. I will save myself from two pests: hurry and indecision.
Just for today I will have a quiet half hour all by myself and relax. During this half hour, sometime, I will try to get a better perspective of my life. Just for today I will be unafraid. Especially I will not be afraid to enjoy what is beautiful，and to believe that as I give to the world, so the world will give to me.
    </string>
    <string name="btnGoToShopping">Go to Shopping</string>
    <string name="btnItem">Item</string>
    <string name="tv1">Apple</string>
    <string name="tv2">Rice</string>
    <string name="tv3">Cheese</string>
    <string name="tv4">Banana</string>
    <string name="tv5">RollCookie</string>
    <string name="btnApple">Apple</string>
    <string name="btnRice">Rice</string>
    <string name="btnCheese">Cheese</string>
    <string name="btnBanana">Banana</string>
    <string name="btnRollCookie">RollCookie</string>
    <string name="btnCheckItem">Check Item</string>
    <string name="btnCount">Count</string>
    <string name="tvCount">0</string>
    <string name="btnTestSaveInstance">Test Save Instance</string>

</resources>
